lib/core/ffi/litert_lm_bindings.dart


  late final _litert_lm_conversation_optional_args_createPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<LiteRtLmConversationOptionalArgs>
              Function()>>('litert_lm_conversation_optional_args_create');
  late final _litert_lm_conversation_optional_args_create =
      _litert_lm_conversation_optional_args_createPtr.asFunction<
          ffi.Pointer<LiteRtLmConversationOptionalArgs> Function()>();

  void litert_lm_conversation_optional_args_delete(
    ffi.Pointer<LiteRtLmConversationOptionalArgs> optional_args,
  ) {
    return _litert_lm_conversation_optional_args_delete(
      optional_args,
    );
  }

  late final _litert_lm_conversation_optional_args_deletePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<LiteRtLmConversationOptionalArgs>)>>(
      'litert_lm_conversation_optional_args_delete');
  late final _litert_lm_conversation_optional_args_delete =
      _litert_lm_conversation_optional_args_deletePtr.asFunction<
          void Function(ffi.Pointer<LiteRtLmConversationOptionalArgs>)>();

  void litert_lm_conversation_optional_args_set_visual_token_budget(
    ffi.Pointer<LiteRtLmConversationOptionalArgs> optional_args,
    int visual_token_budget,
  ) {
    return _litert_lm_conversation_optional_args_set_visual_token_budget(
      optional_args,
      visual_token_budget,
    );
  }

  late final _litert_lm_conversation_optional_args_set_visual_token_budgetPtr =
      _lookup<
              ffi.NativeFunction<
                  ffi.Void Function(
                      ffi.Pointer<LiteRtLmConversationOptionalArgs>, ffi.Int)>>(
          'litert_lm_conversation_optional_args_set_visual_token_budget');
  late final _litert_lm_conversation_optional_args_set_visual_token_budget =
      _litert_lm_conversation_optional_args_set_visual_token_budgetPtr
          .asFunction<
              void Function(
                  ffi.Pointer<LiteRtLmConversationOptionalArgs>, int)>();

  void litert_lm_set_min_log_level(
    int level,
  ) {
    return _litert_lm_set_min_log_level(
      level,
    );
  }

  late final _litert_lm_set_min_log_levelPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>(
          'litert_lm_set_min_log_level');
  late final _litert_lm_set_min_log_level =
      _litert_lm_set_min_log_levelPtr.asFunction<void Function(int)>();

  ffi.Pointer<LiteRtLmEngineSettings> litert_lm_engine_settings_create(
    ffi.Pointer<ffi.Char> model_path,
    ffi.Pointer<ffi.Char> backend_str,
    ffi.Pointer<ffi.Char> vision_backend_str,
    ffi.Pointer<ffi.Char> audio_backend_str,
  ) {
    return _litert_lm_engine_settings_create(
      model_path,
      backend_str,
      vision_backend_str,
      audio_backend_str,
    );
  }

  late final _litert_lm_engine_settings_createPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<LiteRtLmEngineSettings> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('litert_lm_engine_settings_create');
  late final _litert_lm_engine_settings_create =
      _litert_lm_engine_settings_createPtr.asFunction<
          ffi.Pointer<LiteRtLmEngineSettings> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>();

  void litert_lm_engine_settings_delete(
    ffi.Pointer<LiteRtLmEngineSettings> settings,
  ) {
    return _litert_lm_engine_settings_delete(
      settings,
    );
  }

  late final _litert_lm_engine_settings_deletePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<LiteRtLmEngineSettings>)>>(
      'litert_lm_engine_settings_delete');
  late final _litert_lm_engine_settings_delete =
      _litert_lm_engine_settings_deletePtr
          .asFunction<void Function(ffi.Pointer<LiteRtLmEngineSettings>)>();

  void litert_lm_engine_settings_set_max_num_tokens(
    ffi.Pointer<LiteRtLmEngineSettings> settings,
    int max_num_tokens,
  ) {
    return _litert_lm_engine_settings_set_max_num_tokens(
      settings,
      max_num_tokens,
    );
  }

  late final _litert_lm_engine_settings_set_max_num_tokensPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<LiteRtLmEngineSettings>,
              ffi.Int)>>('litert_lm_engine_settings_set_max_num_tokens');
  late final _litert_lm_engine_settings_set_max_num_tokens =
      _litert_lm_engine_settings_set_max_num_tokensPtr.asFunction<
          void Function(ffi.Pointer<LiteRtLmEngineSettings>, int)>();

  void litert_lm_engine_settings_set_parallel_file_section_loading(
    ffi.Pointer<LiteRtLmEngineSettings> settings,
    bool parallel_file_section_loading,
  ) {
    return _litert_lm_engine_settings_set_parallel_file_section_loading(
      settings,
      parallel_file_section_loading,
    );
  }

  late final _litert_lm_engine_settings_set_parallel_file_section_loadingPtr =
      _lookup<
              ffi.NativeFunction<
                  ffi.Void Function(
                      ffi.Pointer<LiteRtLmEngineSettings>, ffi.Bool)>>(
          'litert_lm_engine_settings_set_parallel_file_section_loading');
  late final _litert_lm_engine_settings_set_parallel_file_section_loading =
      _litert_lm_engine_settings_set_parallel_file_section_loadingPtr
          .asFunction<
              void Function(ffi.Pointer<LiteRtLmEngineSettings>, bool)>();

  void litert_lm_engine_settings_set_max_num_images(
    ffi.Pointer<LiteRtLmEngineSettings> settings,
    int max_num_images,
  ) {
    return _litert_lm_engine_settings_set_max_num_images(
      settings,
      max_num_images,
    );
  }

  late final _litert_lm_engine_settings_set_max_num_imagesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<LiteRtLmEngineSettings>,
              ffi.Int)>>('litert_lm_engine_settings_set_max_num_images');
  late final _litert_lm_engine_settings_set_max_num_images =
      _litert_lm_engine_settings_set_max_num_imagesPtr.asFunction<
          void Function(ffi.Pointer<LiteRtLmEngineSettings>, int)>();

  void litert_lm_engine_settings_set_cache_dir(
    ffi.Pointer<LiteRtLmEngineSettings> settings,
    ffi.Pointer<ffi.Char> cache_dir,
  ) {
    return _litert_lm_engine_settings_set_cache_dir(
      settings,
      cache_dir,
    );
  }

  late final _litert_lm_engine_settings_set_cache_dirPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<LiteRtLmEngineSettings>, ffi.Pointer<ffi.Char>)>>(
      'litert_lm_engine_settings_set_cache_dir');
  late final _litert_lm_engine_settings_set_cache_dir =
      _litert_lm_engine_settings_set_cache_dirPtr.asFunction<
          void Function(
              ffi.Pointer<LiteRtLmEngineSettings>, ffi.Pointer<ffi.Char>)>();

  void litert_lm_engine_settings_set_litert_dispatch_lib_dir(
    ffi.Pointer<LiteRtLmEngineSettings> settings,
    ffi.Pointer<ffi.Char> lib_dir,
  ) {
    return _litert_lm_engine_settings_set_litert_dispatch_lib_dir(
      settings,
      lib_dir,
    );
  }

  late final _litert_lm_engine_settings_set_litert_dispatch_lib_dirPtr =
      _lookup<
              ffi.NativeFunction<
                  ffi.Void Function(ffi.Pointer<LiteRtLmEngineSettings>,
                      ffi.Pointer<ffi.Char>)>>(
          'litert_lm_engine_settings_set_litert_dispatch_lib_dir');
  late final _litert_lm_engine_settings_set_litert_dispatch_lib_dir =
      _litert_lm_engine_settings_set_litert_dispatch_lib_dirPtr.asFunction<
          void Function(
              ffi.Pointer<LiteRtLmEngineSettings>, ffi.Pointer<ffi.Char>)>();

  void litert_lm_engine_settings_set_activation_data_type(
    ffi.Pointer<LiteRtLmEngineSettings> settings,
    int activation_data_type_int,
  ) {
    return _litert_lm_engine_settings_set_activation_data_type(
      settings,
      activation_data_type_int,
    );
  }

  late final _litert_lm_engine_settings_set_activation_data_typePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<LiteRtLmEngineSettings>,
              ffi.Int)>>('litert_lm_engine_settings_set_activation_data_type');
  late final _litert_lm_engine_settings_set_activation_data_type =
      _litert_lm_engine_settings_set_activation_data_typePtr.asFunction<
          void Function(ffi.Pointer<LiteRtLmEngineSettings>, int)>();

  void litert_lm_engine_settings_set_prefill_chunk_size(
    ffi.Pointer<LiteRtLmEngineSettings> settings,
    int prefill_chunk_size,
  ) {
    return _litert_lm_engine_settings_set_prefill_chunk_size(
      settings,
      prefill_chunk_size,
    );
  }

  late final _litert_lm_engine_settings_set_prefill_chunk_sizePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<LiteRtLmEngineSettings>,
              ffi.Int)>>('litert_lm_engine_settings_set_prefill_chunk_size');
  late final _litert_lm_engine_settings_set_prefill_chunk_size =
      _litert_lm_engine_settings_set_prefill_chunk_sizePtr.asFunction<
          void Function(ffi.Pointer<LiteRtLmEngineSettings>, int)>();

  void litert_lm_engine_settings_enable_benchmark(
    ffi.Pointer<LiteRtLmEngineSettings> settings,
  ) {
    return _litert_lm_engine_settings_enable_benchmark(
      settings,
    );
  }

  late final _litert_lm_engine_settings_enable_benchmarkPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<LiteRtLmEngineSettings>)>>(
      'litert_lm_engine_settings_enable_benchmark');
  late final _litert_lm_engine_settings_enable_benchmark =
      _litert_lm_engine_settings_enable_benchmarkPtr
          .asFunction<void Function(ffi.Pointer<LiteRtLmEngineSettings>)>();

  void litert_lm_engine_settings_set_num_prefill_tokens(
    ffi.Pointer<LiteRtLmEngineSettings> settings,
    int num_prefill_tokens,
  ) {
    return _litert_lm_engine_settings_set_num_prefill_tokens(
      settings,
      num_prefill_tokens,
    );
  }

  late final _litert_lm_engine_settings_set_num_prefill_tokensPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<LiteRtLmEngineSettings>,
              ffi.Int)>>('litert_lm_engine_settings_set_num_prefill_tokens');
  late final _litert_lm_engine_settings_set_num_prefill_tokens =
      _litert_lm_engine_settings_set_num_prefill_tokensPtr.asFunction<
          void Function(ffi.Pointer<LiteRtLmEngineSettings>, int)>();

  void litert_lm_engine_settings_set_num_decode_tokens(
    ffi.Pointer<LiteRtLmEngineSettings> settings,
    int num_decode_tokens,
  ) {
    return _litert_lm_engine_settings_set_num_decode_tokens(
      settings,
      num_decode_tokens,
    );
  }

  late final _litert_lm_engine_settings_set_num_decode_tokensPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<LiteRtLmEngineSettings>,
              ffi.Int)>>('litert_lm_engine_settings_set_num_decode_tokens');
  late final _litert_lm_engine_settings_set_num_decode_tokens =
      _litert_lm_engine_settings_set_num_decode_tokensPtr.asFunction<
          void Function(ffi.Pointer<LiteRtLmEngineSettings>, int)>();

  void litert_lm_engine_settings_set_enable_speculative_decoding(
    ffi.Pointer<LiteRtLmEngineSettings> settings,
    bool enable_speculative_decoding,
  ) {
    return _litert_lm_engine_settings_set_enable_speculative_decoding(
      settings,
      enable_speculative_decoding,
    );
  }
